Boolean glyphicon : correctif alignement vertical.
git-svn-id: svn+ssh://svn.projects.openwide.fr/svnroot/owsi-tools/trunk/owsi-core@1880 d3474844-eb8e-4abc-b058-2b321fed648b

--- a/owsi-core-components/owsi-core-component-wicket-more/src/main/java/fr/openwide/core/wicket/more/markup/html/template/css/common.less
+++ b/owsi-core-components/owsi-core-component-wicket-more/src/main/java/fr/openwide/core/wicket/more/markup/html/template/css/common.less
@@ -85,4 +85,6 @@ ul.itemit {
 	width: 14px;
 	line-height: 14px;
 	display: inline-block;
+	margin-top: 1px;
+	vertical-align: text-top;
 }
